# haskell-prog-home-work

./: .gitignore  LICENSE  README.md  homeworks.cabal  hw1.cabal
app/: Main.hs
src/: Calc.hs  Fibonacci.hs  Golf.hs  HW1.hs  HW4.hs  Lib.hs  Log.hs  LogAnalysis.hs  Parser.hs  StackVM.hs
