name:           homeworks
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/hw1#readme>
homepage:       https://github.com/githubuser/hw1#readme
bug-reports:    https://github.com/githubuser/hw1/issues
author:         Daniil Smirnov
maintainer:     example@example.com
copyright:      2018 Daniil Smirnov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:     ChangeLog.md
                        README.md

source-repository head
  type:               git
  location:           https://github.com/githubuser/hw1

library
  exposed-modules:    HW1
                    , LogAnalysis
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <5
  ghc-options:        -Wall
  default-language:   Haskell2010

executable homeworks-exe
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                    , homeworks
  default-language:   Haskell2010

test-suite homeworks-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                    , homeworks
  default-language:   Haskell2010
