name:           hw1
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/hw1#readme>
homepage:       https://github.com/githubuser/hw1#readme
bug-reports:    https://github.com/githubuser/hw1/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:     ChangeLog.md
                        README.md

source-repository head
  type:               git
  location:           https://github.com/githubuser/hw1

library
  exposed-modules:    HW1
  other-modules:      Paths_hw1
  hs-source-dirs:     src
  build-depends:      base >=4.7 && <5
  ghc-options:        -Wall
  default-language:   Haskell2010

executable hw1-exe
  main-is:            Main.hs
  other-modules:      Paths_hw1
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                    , hw1
  default-language:   Haskell2010

test-suite hw1-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Paths_hw1
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >=4.7 && <5
                    , hw1
  default-language:   Haskell2010
